Other:	Adding invalid-message-cleared class to invalid message boxes that no longer apply. As default these will be styled as visibility=hidden which does not change the layout even when messages not displayed inline. This prevents an action button jumping out from under the mouse as the field looses focus and before the mouseup event.

--- a/src/main/webapp/css/rhinoform.css
+++ b/src/main/webapp/css/rhinoform.css
@@ -19,6 +19,9 @@ input[type='radio']+label {
 	margin: 0 5px;
 }
 
+.invalid-message-cleared {
+	visibility: hidden;
+}
 
 /** Auto-complete **/
 .rf-dropdown {
